Add ATS Policy exception for iOS. Minor format tweaks for iOS. Remove redundant code.

--- a/LTHT.PeopleManagement/LTHT.PeopleManagement.iOS/Info.plist
+++ b/LTHT.PeopleManagement/LTHT.PeopleManagement.iOS/Info.plist
@@ -40,5 +40,22 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+  <key>NSAppTransportSecurity</key>
+  <dict>
+    <key>NSExceptionDomains</key>
+    <dict>
+      <key>ltht-tech-test.azurewebsites.net</key>
+      <dict>
+        <key>NSExceptionMinimumTLSVersion</key>
+        <string>TLSv1.0</string>
+        <key>NSExceptionRequiresForwardSecrecy</key>
+        <false/>
+        <key>NSExceptionAllowsInsecureHTTPLoads</key>
+        <true/>
+        <key>NSIncludesSubdomains</key>
+        <true/>
+      </dict>
+    </dict>
+  </dict>
 </dict>
 </plist>
